--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Details.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Details.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Product Details";
 }
 
-<h2>Product Details</h2>
+<h2 class="text-white mb-4 text-center">Product Details</h2>
 
-<div class="row">
-    <div class="col-md-6">
-        <img src="@Model.ImageURL" class="img-fluid" alt="@Model.ProductName" style="width: 400px ; height: 400px; object-fit: contain; object-position: center;" />
+<div class="row p-5 d-flex align-items-center gap-4">
+    <div class="col-md-5 p-2 bg-white">
+        <img src="@Model.ImageURL" class="img-fluid w-100" alt="@Model.ProductName" style="width: 400px; height: 400px; object-fit: contain; object-position: center;" />
     </div>
-    <div class="col-md-6">
-        <h3>@Model.ProductName</h3>
-        <p><strong>Description:</strong> @Model.Description</p>
-        <p><strong>Additional Description:</strong> @Model.DescriptionExtra</p>
-        <p><strong>Price:</strong> @Model.Price.ToString("C")</p>
-        <p><strong>Stock:</strong> @Model.Stock</p>
-        <p><strong>Category:</strong> @Model.CategoryName</p>
+    <div class="col-md-6 p-2">
+        <h3 class="text-white mb-4">@Model.ProductName</h3>
+        <p class="text-white mb-2"><strong>Description:</strong> @Model.Description</p>
+        <p class="text-white mb-2"><strong>Additional Description:</strong> @Model.DescriptionExtra</p>
+        <p class="text-white mb-2"><strong>Price:</strong> @Model.Price.ToString("C")</p>
+        <p class="text-white mb-2"><strong>Stock:</strong> @Model.Stock</p>
+        <p class="text-white mb-3"><strong>Category:</strong> @Model.CategoryName</p>
 
         @* <form asp-action="AddToCart" method="post">
             <input type="hidden" asp-for="IdProduct" value="@Model.IdProduct" />
@@ -30,7 +30,6 @@
             <a href="@Url.Action("Index", "Home")" class="btn btn-danger mt-2">Back</a>
             </div>
         </form> *@
-        
         <a class="btn btn-success mt-2 me-3" asp-controller="Admin" asp-action="AddToCart" asp-route-cartProductId="@Model.IdProduct">Aggiungi al carrello</a>
     </div>
 </div>
