--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3 nav-color">
+        @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow mb-3 nav-color">
             <div class="container-fluid row p-0 ps-4">
                 <div class=" col-md-2"><img src="~/img/logo.png" alt="logo" class="logo" /></div>
                 <div class=" col-md-8 text-center"><div class="round position-absolute"></div><a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>
@@ -39,6 +39,46 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginView"><img src="~/img/person-circle.svg" /></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav> *@
+        <nav class="navbar navbar-expand-md navbar-light box-shadow mb-3 nav-color">
+            <div class="container-fluid">
+                <div class="col-md-2">
+                    <img src="~/img/logo.png" alt="logo" class="logo" />
+                </div>
+                <div class="col-md-8 text-center">
+                    <img src="/img/titolo.png">
+                    @*<a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>*@ 
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-white"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end col-md-2" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-controller="Search" asp-action="Index">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="@Url.Action("Admin","Admin")">Admin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Index">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginView">
+                                <i class="fas fa-user"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
